Fix actions layer on small devices

--- a/modules/Backend/skin/css/leafiny.css
+++ b/modules/Backend/skin/css/leafiny.css
@@ -322,7 +322,7 @@ main {
     right: 0;
     left: 230px;
     border-top: 1px solid #ddd;
-    z-index: 1000;
+    z-index: 900;
     padding: 40px 20px;
     background: #fff;
 }
